; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_gp8psk-fe.c_gp8psk_tuned_to_DCII.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_gp8psk-fe.c_gp8psk_tuned_to_DCII.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.gp8psk_fe_state* }
%struct.gp8psk_fe_state = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32, i32, i32, i32, i32*, i32)* }

@GET_8PSK_CONFIG = common dso_local global i32 0, align 4
@bmDCtuned = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @gp8psk_tuned_to_DCII to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gp8psk_tuned_to_DCII(%struct.dvb_frontend* %0) #0 {
  %2 = alloca %struct.dvb_frontend*, align 8
  %3 = alloca %struct.gp8psk_fe_state*, align 8
  %4 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %2, align 8
  %5 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %6 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %5, i32 0, i32 0
  %7 = load %struct.gp8psk_fe_state*, %struct.gp8psk_fe_state** %6, align 8
  store %struct.gp8psk_fe_state* %7, %struct.gp8psk_fe_state** %3, align 8
  %8 = load %struct.gp8psk_fe_state*, %struct.gp8psk_fe_state** %3, align 8
  %9 = getelementptr inbounds %struct.gp8psk_fe_state, %struct.gp8psk_fe_state* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (i32, i32, i32, i32, i32*, i32)*, i32 (i32, i32, i32, i32, i32*, i32)** %11, align 8
  %13 = load %struct.gp8psk_fe_state*, %struct.gp8psk_fe_state** %3, align 8
  %14 = getelementptr inbounds %struct.gp8psk_fe_state, %struct.gp8psk_fe_state* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @GET_8PSK_CONFIG, align 4
  %17 = call i32 %12(i32 %15, i32 %16, i32 0, i32 0, i32* %4, i32 1)
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @bmDCtuned, align 4
  %20 = and i32 %18, %19
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
